custom-resource-consumers/takeout/apps/home-automation/motioneye/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: motioneye
  namespace: home-automation
  annotations: {}
  labels:
    app: motioneye
spec:
  replicas: 0 # active nas
  serviceName: motioneye
  selector:
    matchLabels:
      app: motioneye
  template:
    metadata:
      annotations: {}
      labels:
        app: motioneye
    spec:
      containers:
      - name: motioneye
        image: ccrisan/motioneye:0.42-amd64
        imagePullPolicy: Always
        # command: ["tail","-f","/dev/null"]
        ports:
        - containerPort: 8765
          name: http
          protocol: TCP
        - containerPort: 9081
          name: tcp-stream1
          protocol: TCP
        - containerPort: 9082
          name: tcp-stream2
          protocol: TCP
        - containerPort: 9083
          name: tcp-stream3
          protocol: TCP
        - containerPort: 9084
          name: tcp-stream4
          protocol: TCP
        volumeMounts:
          - mountPath: "/dev/dri"
            name: dri
          # - mountPath: "/var/lib/motioneye/"
          #   name: braavos-camera
          - mountPath: "/etc/motioneye"
            name: motioneye-config
        securityContext:
            privileged: true
        resources:
          requests:
            cpu: 2000m
          limits:
            memory: 512Mi
      volumes:
        - name: dri
          persistentVolumeClaim:
            claimName: dri-pvc
        - name: motioneye-config
          persistentVolumeClaim:
            claimName: motioneye-config-nas
      #   - name: braavos-camera
      #     persistentVolumeClaim:
      #       claimName: braavos-camera-pvc
      nodeSelector:
        graphics: dri
      imagePullSecrets:
        - name: docker-hub
