custom-resource-consumers/takeout/apps/home-automation/motioneye/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motioneye
  namespace: home-automation
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "false"
    nginx.ingress.kubernetes.io/auth-url: "http://motioneye-oauth2-proxy.home-automation.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: ${personal_domain_ddns}
spec:
  tls:
    - hosts:
        - &host "nvr.${personal_domain}"
      secretName: *host
  rules:
  - host: *host
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: motioneye
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motioneye-oauth2-proxy
  namespace: home-automation
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - &host "nvr.${personal_domain}"
      secretName: *host
  rules:
  - host: *host
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: motioneye-oauth2-proxy
            port:
              number: 80
